manifests/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: foyle-dev-cert
    # see: https://gateway-api.sigs.k8s.io/references/spec/#gateway.networking.k8s.io/v1beta1.RouteNamespaces
    allowedRoutes:
      namespaces:
        from: All # Allow routes from all namespaces (can restrict to specific namespaces)        
  addresses:
  - type: NamedAddress
    value: foyle-dev
